--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -363,6 +363,19 @@ html, body, #worksheet_container {height:100%;}
       h3 {
          font-size:20px;
       }
+      code{
+         font-size:80%;
+         display: inline;
+         max-width: initial;
+         padding: 0;
+         margin: 0;
+         overflow: initial;
+         line-height: inherit;
+         word-wrap: normal;
+         border: 0;
+         word-break: normal;
+         white-space: pre;
+      }
    }
    .type-markup,
    .type-inline,
