simplify / line up the text on main page to make it look nicer

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -24,18 +24,19 @@
     <div class="container">
         <div class="row">
             <p>
-            CodaLab is an ecosystem for conducting computational
-            research in a more efficient, reproducible, and collaborative manner.
+            CodaLab (which stands for <b><i>co</i></b>de and <b><i>da</i></b>ta <b><i>lab</i></b>)
+            is an ecosystem for conducting computational
+            research in an efficient, reproducible, and collaborative manner.
             </p>
             <div class="col-sm-6">
                 <p><a href="{%if PREVIEW_WORKSHEETS %}/worksheets{% else %}#{% endif %}"><img src="{{STATIC_URL}}img/icon_experiments.png" alt="CodaLab Worksheets"></a></p>
                 <p><strong>Worksheets</strong> allow you to
                 capture complex research pipelines in a reproducible way
                 and create "executable papers".
-                Use any data format or programming language &mdash; great for the power user!
+                Use any data format and language &mdash; great for the power user!
                 </p>
                 <ul class="alt-bullet">
-                    <li><a href="/worksheets"><strong>Explore worksheets</strong></a></li>
+                    <li><a href="/worksheets"><strong>[Explore worksheets]</strong></a></li>
                 </ul>
 
             </div>
@@ -47,12 +48,10 @@
                 You can win prizes and also create your own competition.
                 </p>
                 <ul class="alt-bullet">
-                    <li><a href="/competitions"><strong>Explore competitions</strong></a></li>
+                    <li><a href="/competitions"><strong>[Explore competitions]</strong></a></li>
                 </ul>
             </div>
         </div>
-
-        <p class="text-center pad-top pad-bottom"><a href="https://github.com/codalab/codalab/wiki/Dev_How-to-Contribute"><strong>Contribute your skills</strong></a> to help develop the CodaLab platform!</p>
     </div>
 {% endblock content %}
 
