feat: hide checkboxes and Fix: footer
[#1161] [#1279]

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -7594,7 +7594,7 @@ body,
   position: absolute;
   left: 0;
   right: 25%;
-  padding: 0 30px;
+  padding: 0 30px 50px 30px;
   height: 100%;
   overflow: auto;
 }
