--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -113,7 +113,7 @@ html, body, #worksheet_container {height:100%;}
       position: absolute;
       left: 0;
       right:@initial-panel-width;
-      padding: 0 @grid-gutter-width;
+      padding: 0 @grid-gutter-width 50px @grid-gutter-width;
       height:100%;
       overflow:auto;
    }
