Removed edit mode and renamed the existing raw edit mode to edit mode; a few cosmetic improvements

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -38,79 +38,39 @@
                 <h4>Keyboard Shortcuts</h4>
             </div>
             <div class="modal-body">
-                <h5>General</h5>
                 <table class="table table-striped">
                     <tr>
-                        <td><kbd>c</kbd> Jump to the console</td>
+                      <td><kbd>c</kbd></td><td>Focus on web terminal</td>
                     </tr>
                     <tr>
-                        <td><kbd>E</kbd> Toggle editing mode</td>
+                      <td><kbd>ESC</kbd></td><td>Focus on worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>F</kbd> Raw editing mode for worksheet</td>
+                      <td><kbd>C</kbd></td><td>Show/hide web terminal</td>
                     </tr>
                     <tr>
-                        <td><kbd>j</kbd> or <kbd>↓</kbd> Highlight next worksheet item or table row</td>
+                      <td><kbd>e</kbd></td><td>Edit worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>k</kbd> or <kbd>↑</kbd> Highlight previous worksheet item or table row</td>
+                      <td><kbd>R</kbd></td><td>Refresh worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>ctrl + j</kbd> or <kbd>⌘ + j</kbd> Move highlighted worksheet item down</td>
+                      <td><kbd>j</kbd> or <kbd>↓</kbd></td><td>Move cursor down</td>
                     </tr>
                     <tr>
-                        <td><kbd>ctrl + k</kbd> or <kbd>⌘ + k</kbd> Move highlighted worksheet item up</td>
+                      <td><kbd>k</kbd> or <kbd>↑</kbd></td><td>Move cursor up</td>
                     </tr>
                     <tr>
-                        <td><kbd>G</kbd> Jump to end of worksheet</td>
+                      <td><kbd>G</kbd></td><td>Move to end of worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>1 G</kbd> Jump to beginning of worksheet</td>
+                      <td><kbd>1 G</kbd></td><td>Move to beginning of worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>R</kbd> Refresh worksheet</td>
+                      <td><kbd>ENTER</kbd></td><td>Open current bundle or worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>?</kbd> Open keyboard shortcut help</td>
-                    </tr>
-                </table>
-                <h5>In edit mode</h5>
-                <table class="table table-striped">
-                    <tr>
-                        <td><kbd>x</kbd> Select highlighted item</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>d</kbd> Detach selected items from worksheet (doesn't delete)</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>O</kbd> Insert markup before highlighted item or row</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>o</kbd> Insert markup after highlighted item or row</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>e</kbd> Edit highlighted item</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>ctrl + enter</kbd> or <kbd>⌘ + enter</kbd> Save edits</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>esc</kbd> Exit edit mode</td>
-                    </tr>
-                </table>
-                <h5>Tables</h5>
-                <table class="table table-striped">
-                    <tr>
-                        <td><kbd>enter</kbd> Go to details page of highlighted bundle</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>shift + x</kbd> Select table of highlighted row</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>shift + j</kbd> Move highlighted row down</td>
-                    </tr>
-                    <tr>
-                        <td><kbd>shift + k</kbd> Move highlighted row up</td>
+                      <td><kbd>?</kbd></td><td>Show keyboard shortcut help</td>
                     </tr>
                 </table>
             </div>
