--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -23,11 +23,14 @@
 
     <div class="container">
         <div class="row">
-            <p>
-            CodaLab (which stands for <b><i>co</i></b>de and <b><i>da</i></b>ta <b><i>lab</i></b>)
-            is an ecosystem for conducting computational
-            research in an efficient, reproducible, and collaborative manner.
-            </p>
+            <div class="col-sm-6">
+                <button type="button" class="btn btn-danger">Create an Experiment!</button>
+                <p>Run reproducible experiments and created executable papers using worksheets.</p>
+            </div>
+            <div class="col-sm-6">
+                <button type="button" class="btn btn-danger">Join a Challenge!</button>
+                <p>Enter the existing competition to solve challenging data problems, or host your own</p>
+            </div>
             <div class="col-sm-6">
                 <p><a href="{%if PREVIEW_WORKSHEETS %}/worksheets{% else %}#{% endif %}"><img src="{{STATIC_URL}}img/icon_experiments.png" alt="CodaLab Worksheets"></a></p>
                 <p><strong>Worksheets</strong> allow you to
