--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -43,16 +43,16 @@
                       <td><kbd>c</kbd></td><td>Focus on web terminal</td>
                     </tr>
                     <tr>
-                      <td><kbd>ESC</kbd></td><td>Focus on worksheet</td>
+                      <td><kbd>esc</kbd></td><td>Focus on worksheet</td>
                     </tr>
                     <tr>
-                      <td><kbd>C</kbd></td><td>Show/hide web terminal</td>
+                      <td><kbd>shift+c</kbd></td><td>Show/hide web terminal</td>
                     </tr>
                     <tr>
                       <td><kbd>e</kbd></td><td>Edit worksheet</td>
                     </tr>
                     <tr>
-                      <td><kbd>R</kbd></td><td>Refresh worksheet</td>
+                      <td><kbd>shift+r</kbd></td><td>Refresh worksheet</td>
                     </tr>
                     <tr>
                       <td><kbd>j</kbd> or <kbd>↓</kbd></td><td>Move cursor down</td>
@@ -61,13 +61,13 @@
                       <td><kbd>k</kbd> or <kbd>↑</kbd></td><td>Move cursor up</td>
                     </tr>
                     <tr>
-                      <td><kbd>G</kbd></td><td>Move to end of worksheet</td>
+                      <td><kbd>shift+g</kbd></td><td>Move to end of worksheet</td>
                     </tr>
                     <tr>
-                      <td><kbd>1 G</kbd></td><td>Move to beginning of worksheet</td>
+                      <td><kbd>1 shift+g</kbd></td><td>Move to beginning of worksheet</td>
                     </tr>
                     <tr>
-                      <td><kbd>ENTER</kbd></td><td>Open current bundle or worksheet</td>
+                      <td><kbd>enter</kbd></td><td>Open current bundle or worksheet</td>
                     </tr>
                     <tr>
                       <td><kbd>?</kbd></td><td>Show keyboard shortcut help</td>
