Adding links to recent worksheets

--- a/codalab/apps/web/templates/web/worksheets_latest.html
+++ b/codalab/apps/web/templates/web/worksheets_latest.html
@@ -5,7 +5,7 @@
 <div class="worksheets-list">
 	<div class="worksheet-tile">
 		<div class="worksheet-inner">
-			<h3>{{worksheet.1}}</h3>
+			<h3><a href="{% url 'ws_view' worksheet.0 %}">{{worksheet.1}}</a></h3>
 			<p class="organizer_by">By {{ worksheet.2 }}</p>
 		</div>
 	</div>
