--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -9074,7 +9074,7 @@ fieldset[disabled] #worksheet-list .worksheet-tile .worksheet-inner button.delet
   cursor: pointer;
   color: #739cb9;
 }
-#bundle-content .bundle-tile .bundle-file-view-container .file-browser-table {
+.file-browser-table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 25px;
