--- a/codalab/apps/web/templates/web/competition_latest.html
+++ b/codalab/apps/web/templates/web/competition_latest.html
@@ -21,7 +21,7 @@
 			<h3>{{ competition.title }}</h3>
 			<p class="organizer">Organized by {{ competition.creator }}</p>
 		</div>
-    	<div class="col-sm-4 col-md-4 right-panel">
+    	<div class="col-sm-4 col-md-4 right-panel right-panel-homepage">
 			{{ competition.get_start_date|date:"M d, Y" }}<br>
             <b>{{ competition.get_participant_count }}</b> participant{% if competition.get_participant_count > 1 %}s{% endif %}<br>
             {% if competition.reward and competition.reward > 0 %}
