--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -193,6 +193,7 @@ input[type="radio"], input[type="checkbox"] {
     color: red;
 }
 
+/* Everything below correspondes to the latest homepage*/
 .col-sm-6 .btn-group .btn-group a{
     color:#FFFFFF;
     font-weight: bold;
@@ -205,8 +206,9 @@ input[type="radio"], input[type="checkbox"] {
   -moz-border-radius: 10px;
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 10px;
-  background: #FF8C00;
+  background: #FFC266;
   border: 1px solid;
+
 }
 
 .homepage_headers{
@@ -214,6 +216,9 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 /*Code for the latest worksheets goes here, only being used in homepage*/
+.container .worksheet-random-list{
+  padding-left: 5px;
+}
 .worksheets-list {
    .checkbox {
       margin:20px 0;
@@ -247,10 +252,12 @@ input[type="radio"], input[type="checkbox"] {
          h3 {
             margin:0;
             padding-bottom: 0;
+
+            a{
+              word-wrap: break-word;
+            }
          }
-         .byline {
-            padding-bottom:0.25em;
-         }
+
          button.delete-worksheet {
             position:absolute;
             bottom:5px;
@@ -273,3 +280,17 @@ input[type="radio"], input[type="checkbox"] {
    }
 }
 
+/*Code for latest competitions in homepage*/
+.competition-tile .row .right-panel-homepage{
+  line-height: 20px;
+}
+
+.container .row .competition-latest-list{
+  padding-left: 35px;
+}
+
+@media (max-width:@screen-md) {
+    .container .row .competition-latest-list {
+        padding-left:5px;
+    }
+}
