allow editing of info in side-panel

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -3404,6 +3404,9 @@ tbody.collapse.in {
   filter: alpha(opacity=0);
   opacity: 0;
 }
+.greyed-out {
+   opacity:0.4;
+}
 .input-group {
   position: relative;
   display: table;
