--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -255,7 +255,12 @@ th {
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
+  cursor: pointer;
   position: relative;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
   top: 1px;
   display: inline-block;
   font-family: 'Glyphicons Halflings';
@@ -7415,6 +7420,9 @@ kbd {
   left: 50%;
   margin-left: -15px;
   top: 7px;
+}
+.sidepanel-file-viewer-contents {
+  cursor: pointer;
 }
 .select2-container-multi .select2-choices .select2-search-field input:focus {
   border: none;
