--- a/codalab/apps/web/templates/account/login.html
+++ b/codalab/apps/web/templates/account/login.html
@@ -63,9 +63,9 @@
             {% endif %}
             <button class="btn btn-primary margin-top" type="submit">{% trans "Sign In" %}</button>
         </form>
-        <p class="pad-top"><a href="{{ signup_url }}">Sign up for a new account</a></p>
-        <a href="../password/reset/">Forgot your password?</a></p>
-        <a href="" onclick="alert('Please wait 5 minutes and attempt logging in again to resend confirmation email.'); return false;">Resend confirmation email?</a>
+        <p>
+        <p><a href="../password/reset/">Forgot your password?</a></p>
+        <a href="" onclick="alert('Please wait 5 minutes and attempt logging in again to resend confirmation email.'); return false;">Resend confirmation email</a>
     </div>
 </div>
 {% endblock %}
