--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -7473,7 +7473,7 @@ input[type="checkbox"] {
 }
 /* Everything below correspondes to the latest homepage*/
 .col-sm-6 .btn-group .btn-group a {
-  color: #FFFFFF;
+  color: #777777;
   font-weight: bold;
   font-size: 18px;
 }
@@ -7485,7 +7485,6 @@ input[type="checkbox"] {
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 10px;
   background: #FFC266;
-  border: 1px solid;
 }
 .homepage_headers {
   color: #739cb9;
