--- a/codalab/apps/web/static/css/jquery-editable.css
+++ b/codalab/apps/web/static/css/jquery-editable.css
@@ -191,7 +191,7 @@ a.editable-click.editable-disabled:hover {
 }
 
 .editable-empty, .editable-empty:hover, .editable-empty:focus{
-  font-style: italic; 
+  /*font-style: italic; */
   color: #DD1144;  
   /* border-bottom: none; */
   text-decoration: none;
