home_worksheet_name

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -137,6 +137,7 @@ var worksheet_url = '/api' + document.location.pathname;
     worksheet_url = '/api/worksheets/{{worksheet_uuid}}/'
 {% endif %}
 $(function () {
+  home_worksheet_name = "{{home_worksheet_name}}";
   ws_obj = new WorksheetContent(worksheet_url);  // Manage current worksheet information
 });
 
