propagate information from sidepanel; don't grey out the side panel, replace empty string with <none>

--- a/codalab/apps/web/static/css/jquery-editable.css
+++ b/codalab/apps/web/static/css/jquery-editable.css
@@ -191,8 +191,8 @@ a.editable-click.editable-disabled:hover {
 }
 
 .editable-empty, .editable-empty:hover, .editable-empty:focus{
-  /*font-style: italic; */
-  color: #DD1144;  
+  font-style: italic;
+  color: #DD1144;
   /* border-bottom: none; */
   text-decoration: none;
 }
